force-app/main/default/objects/Parcel__c/Parcel__c.object-meta.xml
<CustomObject>
    <label>Parcel</label>
    <pluralLabel>Parcels</pluralLabel>
    <nameField><label>Parcel Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>