force-app/main/default/objects/Parcel__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Booked</fullName><default>true</default><label>Booked</label></value>
        <value><fullName>In Transit</fullName><default>false</default><label>In Transit</label></value>
        <value><fullName>Out for Delivery</fullName><default>false</default><label>Out for Delivery</label></value>
        <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
    </valueSetDefinition></valueSet>
</CustomField>