force-app/main/default/objects/Parcel__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <inlineHelpText>Weight in kg</inlineHelpText>
</CustomField>